@@ -126,7 +126,7 @@
         <tr dataId="(#=obj.id#)" class="projectEditRow" >
             <th class="gdfCell" align="right"><span class="taskRowIndex">(#=obj.getRow()+1#)</span></th>
             <td class="gdfCell" align="right"><span>(#=obj.id#)</span></td>
-            <td class="gdfCell indentCell" style="font-weight: bold">(#=obj.link()#)</td>
+            <td class="gdfCell indentCell" style="font-weight: bold"><div class='folder uncollapsed'></div><div style='position:relative;left:15px;'>(#=obj.link()#)</div></td>
             <td class="gdfCell"><div class="date start"></div></td>
             <td class="gdfCell"><div class="date end"></div></td>
             <td class="gdfCell"></td>
@@ -137,14 +137,14 @@
 
     <div class="__template__" type="PARENTTASKROW"><!--
         <tr dataId="(#=obj.id#)" class="parentTaskEditRow">
-        <th class="gdfCell" align="right"><span class="taskRowIndex">(#=obj.getRow()+1#)</span></th>
-        <td class="gdfCell" align="right" style="background-color: (#=obj.progress >= 100 ? 'rgb(153, 255, 51)' : 'red'#)"><span>(#=obj.id#)</span></td>
-        <td class="gdfCell indentCell" style="padding-left:(#=obj.getParents().length*10#)px; (#=obj.getChildren().length>0?'font-weight: bold':''#)">(#=obj.link()#)</td>
-        <td class="gdfCell"><div class="date start"></div></td>
-        <td class="gdfCell"><div class="date end"></div></td>
-        <td class="gdfCell"><div class="timing">(#=obj.schedule_model.toUpperCase()[0]#): (#=obj.schedule_timing#)(#=obj.schedule_unit#)</div></td>
-        <td class="gdfCell">(#=obj.getDependsLinks()#)</td>
-        <td class="gdfCell">(#=obj.getResourcesLinks()#)</td>
+            <th class="gdfCell" align="right"><span class="taskRowIndex">(#=obj.getRow()+1#)</span></th>
+            <td class="gdfCell" align="right" style="background-color: (#=obj.progress >= 100 ? 'rgb(153, 255, 51)' : 'red'#)"><span>(#=obj.id#)</span></td>
+            <td class="gdfCell indentCell" style="padding-left:(#=obj.getParents().length*10#)px; (#=obj.getChildren().length>0?'font-weight: bold':''#)"><div class='folder uncollapsed'></div><div style='position:relative;left:15px;'>(#=obj.link()#)</div></td>
+            <td class="gdfCell"><div class="date start"></div></td>
+            <td class="gdfCell"><div class="date end"></div></td>
+            <td class="gdfCell"><div class="timing">(#=obj.schedule_model.toUpperCase()[0]#): (#=obj.schedule_timing#)(#=obj.schedule_unit#)</div></td>
+            <td class="gdfCell">(#=obj.getDependsLinks()#)</td>
+            <td class="gdfCell">(#=obj.getResourcesLinks()#)</td>
         </tr>
     --></div>
 
@@ -199,39 +199,41 @@
             <div class="layout">
                 <div class="projectLabel">(#=obj.link()#)</div>
             </div>
+            <div class='children'></div>
         </div>
     --></div>
 
 
     <div class="__template__" type="TASKBAR"><!--
         <div class="taskBox" dataId="(#=obj.id#)">
-        <div class="layout (#=obj.hasExternalDep?'extDep':''#)">
-            <div class="taskProgress" style="width:(#=obj.progress>100?100:obj.progress#)%;"></div>
-            <div class="taskExtraTiming" style="width:(#=(obj.schedule_timing - obj.bid_timing)/obj.schedule_timing*100#)%;;"></div>
-            <div class="taskScheduleModel"
-               style="position: absolute; text-align: center; width: 100%;">
-               (#=obj.schedule_model.toUpperCase()[0]#): (#=obj.schedule_timing#)(#=obj.schedule_unit#)
+            <div class="layout (#=obj.hasExternalDep?'extDep':''#)">
+                <div class="taskProgress" style="width:(#=obj.progress>100?100:obj.progress#)%;"></div>
+                <div class="taskExtraTiming" style="width:(#=(obj.schedule_timing - obj.bid_timing)/obj.schedule_timing*100#)%;;"></div>
+                <div class="taskScheduleModel"
+                   style="position: absolute; text-align: center; width: 100%;">
+                   (#=obj.schedule_model.toUpperCase()[0]#): (#=obj.schedule_timing#)(#=obj.schedule_unit#)
+                </div>
+                <div class="leafTaskContextMenu"
+                    dataId="(#=obj.id#)"
+                    name="(#=obj.name#)"
+                    hierarchy_name="(#=obj.hierarchy_name#)"
+                    start=(#=obj.start#)
+                    end=(#=obj.end#)
+                    type="(#=obj.type#)"
+                    priority=(#=obj.priority#)
+                    schedule_model=(#=obj.schedule_model#)
+                    schedule_timing=(#=obj.schedule_timing#)
+                    schedule_unit=(#=obj.schedule_unit#)
+                    description="(#=obj.description#)"
+                    ></div>
+                <div class="milestone (#=obj.startIsMilestone?'active':''#)" ></div>
+                <div class="taskLabel">(#=obj.link()#)</div>
+                <div class="milestone end (#=obj.endIsMilestone?'active':''#)"></div>
+                <div class="taskResourceLabel">(#=obj.getResourcesLinks()#)</div>
+                (#=obj.clippedStart?'<div class="clippedStart">&nbsp</div>':''#)
+                (#=obj.clippedEnd?'<div class="clippedEnd">&nbsp</div>':''#)
             </div>
-            <div class="leafTaskContextMenu"
-                dataId="(#=obj.id#)"
-                name="(#=obj.name#)"
-                hierarchy_name="(#=obj.hierarchy_name#)"
-                start=(#=obj.start#)
-                end=(#=obj.end#)
-                type="(#=obj.type#)"
-                priority=(#=obj.priority#)
-                schedule_model=(#=obj.schedule_model#)
-                schedule_timing=(#=obj.schedule_timing#)
-                schedule_unit=(#=obj.schedule_unit#)
-                description="(#=obj.description#)"
-                ></div>
-            <div class="milestone (#=obj.startIsMilestone?'active':''#)" ></div>
-            <div class="taskLabel">(#=obj.link()#)</div>
-            <div class="milestone end (#=obj.endIsMilestone?'active':''#)"></div>
-            <div class="taskResourceLabel">(#=obj.getResourcesLinks()#)</div>
-            (#=obj.clippedStart?'<div class="clippedStart">&nbsp</div>':''#)
-            (#=obj.clippedEnd?'<div class="clippedEnd">&nbsp</div>':''#)
-        </div>
+            <div class='children'></div>
         </div>
     --></div>
 
